Add a pointer to the engineering design discussion forum.
Summary:
Add a pointer to the engineering design discussion forum.

Test Plan:

Reviewers:

CC:

Task ID: #

Blame Rev:

--- a/README
+++ b/README
@@ -79,4 +79,4 @@ include/rocksdb/statistics.h
 include/rocksdb/transaction_log.h
     An API to retrieve transaction logs from a database.
 
-
+Design discussions are conducted in https://www.facebook.com/groups/rocksdb.dev/
